<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BateriaActivity">

    <Button
        android:id="@+id/botaoBateriaAdicionarId"
        android:layout_width="@dimen/wdithBotaoInicial"
        android:layout_height="@dimen/hiegthBotaoInicial"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="75dp"
        android:text="@string/adiciona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginLeft="158dp"
        android:layout_marginTop="60dp"
        android:text="@string/bateria"
        android:textSize="@dimen/tituloSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botaoBateriaBuscaId"
        android:layout_width="@dimen/wdithBotaoInicial"
        android:layout_height="@dimen/hiegthBotaoInicial"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="75dp"
        android:text="@string/selecionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoBateriaAdicionarId" />
</android.support.constraint.ConstraintLayout>