<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SurfistaActivity">

    <Button
        android:id="@+id/botaoBateriaAdicionarId"
        android:layout_width="@dimen/wdithBotaoInicial"
        android:layout_height="@dimen/hiegthBotaoInicial"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="108dp"
        android:text="@string/adiciona"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSurfista" />

    <Button
        android:id="@+id/botaoSurfistaBuscarId"
        android:layout_width="@dimen/wdithBotaoInicial"
        android:layout_height="@dimen/hiegthBotaoInicial"
        android:layout_marginStart="115dp"
        android:layout_marginLeft="115dp"
        android:layout_marginTop="75dp"
        android:text="@string/selecionar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botaoBateriaAdicionarId" />

    <TextView
        android:id="@+id/titleSurfista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginLeft="153dp"
        android:layout_marginTop="48dp"
        android:text="@string/surfista"
        android:textSize="@dimen/tituloSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>